tests/multiplatform_supports_platform/foo.windows.js
export const a = 1; // error: doesn't conform to interface
